@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-01-19 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add ResponseInfo connection/close support in cloudi_service_tcp
+
 2014-01-18 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Make the C/C++ CloudI API include all processing time in the
